--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.17",
     "geist": "^1.3.1",
     "lucide-react": "^0.294.0",
     "next": "14.2.10",
